versions/v2.15/modules/en/pages/contribute-to-rancher.adoc
= Contributing to {rancher-product-name}
ifeval::["{build-type}" != "srfa"]
:page-languages: [en, de, es, fr, ja, pt, zh]
endif::[]
:revdate: 2026-06-10
:page-revdate: {revdate}
:community-path: contribute-to-rancher.adoc 
:product-path: contribute-to-rancher.adoc
ifeval::["{build-type}" != "community"]
:url-repository: https://github.com/rancher/rancher-product-docs
endif::[]
ifeval::["{build-type}" == "community"]
:url-repository: https://github.com/rancher/rancher-docs
endif::[]

Learn about the repositories used for Rancher and Rancher docs, how to build Rancher repositories, and what information to include when you file an issue.

For more detailed information on how to contribute to the development of Rancher projects, refer to the https://github.com/rancher/rancher/wiki[Rancher Developer Wiki]. The wiki has resources on many topics, including the following:

* How to set up the Rancher development environment and run tests
* The typical flow of an issue through the development lifecycle
* Coding guidelines and development best practices
* Debugging and troubleshooting
* Developing the Rancher API

On the Rancher Users Slack, the channel for developers is *#developer*.

[#_rancher_docs]
== Rancher Docs

If you have suggestions for the documentation on this website, please {url-repository}/issues/new/choose[open an issue] on the repository.

Refer to the {url-repository}#readme[Rancher docs README] for more details on contributing to and building the Rancher docs repo.

[#_rancher_repositories]
== Rancher Repositories

All of repositories are located within our main GitHub organization. There are many repositories used for Rancher, but we'll provide descriptions of some of the main ones used in Rancher.

|===
| Repository | URL | Description

| Rancher
| https://github.com/rancher/rancher
| This repository is the main source code for Rancher.

| Types
| https://github.com/rancher/types
| This repository is the repository that has all the API types for Rancher.

| API Framework
| https://github.com/rancher/norman
| This repository is an API framework for building Rancher style APIs backed by Kubernetes Custom Resources.

| User Interface
| https://github.com/rancher/dashboard/
| This repository is the source of the Dashboard UI.

| (Rancher) Docker Machine
| https://github.com/rancher/machine
| This repository is the source of the Docker Machine binary used when using Node Drivers. This is a fork of the `docker/machine` repository.

| machine-package
| https://github.com/rancher/machine-package
| This repository is used to build the Rancher Docker Machine binary.

| kontainer-engine
| https://github.com/rancher/kontainer-engine
| This repository is the source of kontainer-engine, the tool to provision hosted Kubernetes clusters.

| CLI
| https://github.com/rancher/cli
| This repository is the source code for the Rancher CLI used in Rancher.

| (Rancher) Helm repository
| https://github.com/rancher/helm
| This repository is the source of the packaged Helm binary. This is a fork of the `helm/helm` repository.

| loglevel repository
| https://github.com/rancher/loglevel
| This repository is the source of the loglevel binary, used to dynamically change log levels.
|===

To see all libraries/projects used in Rancher, see the https://github.com/rancher/rancher/blob/master/go.mod[`go.mod` file] in the `rancher/rancher` repository.

.Rancher components used for provisioning/managing Kubernetes clusters
image::ranchercomponentsdiagram-2.6.svg[Rancher diagram]

[#_rancher_bugs_issues_or_questions]
=== Rancher Bugs, Issues or Questions

If you find any bugs or are having any trouble, please search the https://github.com/rancher/rancher/issues[reported issue] as someone may have experienced the same issue or we are actively working on a solution.

If you can't find anything related to your issue, contact us by https://github.com/rancher/rancher/issues/new[filing an issue]. Though we have many repositories related to Rancher, we want the bugs filed in the Rancher repository so we won't miss them! If you want to ask a question or ask fellow users about an use case, we suggest creating a post on the https://forums.rancher.com[Rancher Forums].

[#_checklist_for_filing_issues]
==== Checklist for Filing Issues

Please follow this checklist when filing an issue which will helps us investigate and fix the issue. More info means more data we can use to determine what is causing the issue or what might be related to the issue.

[NOTE]
====
For large amounts of data, please use https://gist.github.com/[GitHub Gist] or similar and link the created resource in the issue.
====


[IMPORTANT]
====
Please remove any sensitive data as it will be publicly viewable.
====


* *Resources:* Provide as much as detail as possible on the used resources. As the source of the issue can be many things, including as much of detail as possible helps to determine the root cause. See some examples below:
** *Hosts:* What specifications does the host have, like CPU/memory/disk, what cloud does it happen on, what Amazon Machine Image are you using, what DigitalOcean droplet are you using, what image are you provisioning that we can rebuild or use when we try to reproduce
** *Operating System:* What operating system are you using? Providing specifics helps here like the output of `cat /etc/os-release` for exact OS release and `uname -r` for exact kernel used
ifeval::["{build-type}" == "community"]
** *Docker:* What Docker version are you using, how did you install it? Most of the details of Docker can be found by supplying output of `docker version` and `docker info`
endif::[]
** *Environment:* Are you in a proxy environment, are you using recognized CA/self signed certificates, are you using an external loadbalancer
** *Rancher:* What version of Rancher are you using, this can be found on the bottom left of the UI or be retrieved from the image tag you are running on the host
** *Clusters:* What kind of cluster did you create, how did you create it, what did you specify when you were creating it
* *Steps to reproduce the issue:* Provide as much detail on how you got into the reported situation. This helps the person to reproduce the situation you are in.
** Provide manual steps or automation scripts used to get from a newly created setup to the situation you reported.
* *Logs:* Provide data/logs from the used resources.
** Rancher

ifeval::["{build-type}" == "community"]
*** Docker install
+
----
docker logs \
--timestamps \
$(docker ps | grep -E "rancher/rancher:|rancher/rancher " | awk '{ print $1 }')
----
endif::[]

*** Kubernetes install using `kubectl`
+
[NOTE]
====
Make sure you configured the correct kubeconfig (for example, `export KUBECONFIG=$PWD/kube_config_cluster.yml` if Rancher is installed on a Kubernetes cluster) or are using the embedded kubectl via the UI.
====
+
----
kubectl -n cattle-system \
logs \
-l app=rancher \
--timestamps=true
----
  
** System logging (these might not all exist, depending on operating system)
*** `/var/log/messages`
*** `/var/log/syslog`
*** `/var/log/kern.log`

ifeval::["{build-type}" == "community"]
** Docker daemon logging (these might not all exist, depending on operating system)
*** `/var/log/docker.log`
endif::[]

* *Metrics:* If you are experiencing performance issues, please provide as much of data (files or screenshots) of metrics which can help determining what is going on. If you have an issue related to a machine, it helps to supply output of `top`, `free -m`, `df` which shows processes/memory/disk usage.
